--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^4.0.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
